fixed button's responsiveness. not centered on viewport in-between desktop and mobile view

--- a/less/index.less
+++ b/less/index.less
@@ -217,13 +217,15 @@ img {
 
 				@media(max-width: 500px) {
 					text-align: center;
+					.flex-center();
+					.flex-column();
 				}
 				p {
 					padding-bottom: 44px;
 				}
 
 				.button {
-					width: 19.4%;
+					width: 155px;
 					.flex-center;
 					padding: 13px 0;
 					border-radius: 5px;
@@ -235,7 +237,7 @@ img {
 
 					@media(max-width: 500px) {
 						width: 40%;
-						margin-left: 135px;
+						margin:0 30%;
 					}
 				}
 			}
